EZP-30526: Convert Search Tab as a standalone ReactJS module

--- a/Resources/public/scss/modules/_ud.scss
+++ b/Resources/public/scss/modules/_ud.scss
@@ -14,3 +14,8 @@
 @import 'ud/selected.locations.item';
 @import 'ud/grid';
 @import 'ud/grid.item';
+@import 'ud/search';
+@import 'ud/content.table';
+@import 'ud/content.table.item';
+@import 'ud/toggle.selection.button';
+@import 'ud/filters';
