--- a/Resources/public/scss/modules/ud/_finder.branch.scss
+++ b/Resources/public/scss/modules/ud/_finder.branch.scss
@@ -1,4 +1,4 @@
 .c-finder-branch {
-    flex-basis: calculateRem(200px);
-    border: calculateRem(1px) solid $ez-color-base-pale;
+    flex-basis: calculateRem(215px);
+    border-right: calculateRem(1px) solid $ez-color-base-pale;
 }
