--- a/Resources/public/scss/modules/ud/_tab.scss
+++ b/Resources/public/scss/modules/ud/_tab.scss
@@ -20,6 +20,7 @@
     &__main {
         grid-area: main;
         background-color: $ez-ground-base-pale;
+        overflow: auto;
     }
 
     &__right-sidebar {
