EZP-30527: Convert Create Tab as a standalone ReactJS module

--- a/Resources/public/scss/modules/_ud.scss
+++ b/Resources/public/scss/modules/_ud.scss
@@ -2,6 +2,8 @@
 @import 'ud/tab';
 @import 'ud/top.menu';
 @import 'ud/content.create';
+@import 'ud/content.create.widget';
+@import 'ud/content.create.button';
 @import 'ud/sort.switcher';
 @import 'ud/view.switcher';
 @import 'ud/menu.button';
