EZP-30927: Make link in Content Tree the same width as whole Content Tree

--- a/Resources/public/scss/modules/content-tree/_list.item.scss
+++ b/Resources/public/scss/modules/content-tree/_list.item.scss
@@ -21,6 +21,7 @@ $list-item-height: calculateRem(20px);
     }
 
     &__link {
+        width: 100%;
         color: inherit;
         display: flex;
         align-items: center;
