--- a/Resources/public/scss/modules/sub-items-list/_table.view.item.scss
+++ b/Resources/public/scss/modules/sub-items-list/_table.view.item.scss
@@ -115,6 +115,7 @@
 
         &[disabled] {
             border-color: $ez-ground-base-dark;
+            background-color: $ez-white;
             cursor: pointer;
         }
     }
