EZP-30840: Use dedicated endpoints for fetching data

--- a/Resources/public/scss/modules/ud/_content.meta.preview.scss
+++ b/Resources/public/scss/modules/ud/_content.meta.preview.scss
@@ -6,6 +6,9 @@
         height: calculateRem(210px);
         background-color: $ez-color-base-pale;
         border-radius: calculateRem(4px);
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
     &__details-item {
