--- a/Resources/public/scss/modules/ud/_main.scss
+++ b/Resources/public/scss/modules/ud/_main.scss
@@ -7,3 +7,10 @@
     height: 100vh;
     width: 100vw;
 }
+
+.ez-is-branch-resizing {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
