EZP-31043: As an Editor, I want to have breadcrumbs in grid view

--- a/Resources/public/scss/modules/_ud.scss
+++ b/Resources/public/scss/modules/_ud.scss
@@ -16,6 +16,7 @@
 @import 'ud/selected.locations.item';
 @import 'ud/grid';
 @import 'ud/grid.item';
+@import 'ud/breadcrumbs';
 @import 'ud/search';
 @import 'ud/content.table';
 @import 'ud/content.table.item';
