EZP-31065: As a Developer, I want UDW to be configurable

--- a/Resources/public/scss/modules/ud/_bookmarks.list.scss
+++ b/Resources/public/scss/modules/ud/_bookmarks.list.scss
@@ -10,6 +10,11 @@
         align-items: center;
         padding: calculateRem(2px) calculateRem(5px);
 
+        &--not-selectable {
+            background-color: $ez-ground-base-dark;
+            cursor: not-allowed;
+        }
+
         &--marked {
             background-color: $ez-color-base-medium;
             color: $ez-white;
