--- a/Resources/public/scss/modules/ud/_content.table.item.scss
+++ b/Resources/public/scss/modules/ud/_content.table.item.scss
@@ -11,6 +11,11 @@
         background-color: lighten($ez-ground-primary, 15%);
     }
 
+    &--not-selectable {
+        background-color: $ez-ground-base-dark;
+        cursor: not-allowed;
+    }
+
     &__toggle-button-wrapper {
         width: calculateRem(20px);
     }
