--- a/Resources/public/scss/modules/ud/_grid.item.scss
+++ b/Resources/public/scss/modules/ud/_grid.item.scss
@@ -62,4 +62,9 @@
             }
         }
     }
+
+    &--not-selectable {
+        background-color: $ez-ground-base-dark;
+        cursor: not-allowed;
+    }
 }
