EZP-31151: Resizing column does not display name of content item

--- a/Resources/public/scss/modules/ud/_grid.scss
+++ b/Resources/public/scss/modules/ud/_grid.scss
@@ -7,7 +7,7 @@
         padding: calculateRem(16px);
         align-items: flex-start;
         overflow: auto;
-        height: calc(100% - #{calculateRem(30px)});
+        max-height: calc(100% - #{calculateRem(30px)});
     }
 
     &__go-up {
