EZP-31152: Content meta preview should display language name

--- a/Resources/public/scss/modules/ud/_content.meta.preview.scss
+++ b/Resources/public/scss/modules/ud/_content.meta.preview.scss
@@ -37,4 +37,15 @@
     &__toggle-bookmark-button {
         border: none;
     }
+
+    &__translations-wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        padding-left: calculateRem(8px);
+    }
+
+    &__translation {
+        text-align: right;
+    }
 }
