--- a/Resources/public/scss/modules/ud/_finder.leaf.scss
+++ b/Resources/public/scss/modules/ud/_finder.leaf.scss
@@ -77,6 +77,7 @@
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
+        font-size: calculateRem(14px);
 
         .ez-icon {
             margin-right: calculateRem(5px);
@@ -92,6 +93,7 @@
             position: absolute;
             top: 50%;
             transform: translateY(-50%);
+            margin-top: calculateRem(-1px);
         }
     }
 }
