--- a/Resources/public/scss/modules/ud/_grid.item.scss
+++ b/Resources/public/scss/modules/ud/_grid.item.scss
@@ -15,6 +15,12 @@
     &__name {
         min-height: calculateRem(30px);
         padding-left: calculateRem(8px);
+        overflow: hidden;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        width: calculateRem(165px);
     }
 
     &__preview {
