--- a/Resources/public/scss/modules/ud/_grid.scss
+++ b/Resources/public/scss/modules/ud/_grid.scss
@@ -8,16 +8,6 @@
         align-items: flex-start;
         overflow: auto;
         max-height: calc(100% - #{calculateRem(30px)});
-    }
-
-    &__go-up {
-        width: calculateRem(165px);
-        height: calculateRem(165px);
-        background-color: $ez-color-base-pale;
-        margin-right: calculateRem(29px);
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        cursor: pointer;
+        align-items: stretch;
     }
 }
