code reviews updates

--- a/Resources/public/scss/modules/sub-items-list/_grid.view.item.scss
+++ b/Resources/public/scss/modules/sub-items-list/_grid.view.item.scss
@@ -8,15 +8,15 @@
     text-decoration: none;
     transition: background 0.3s $ez-admin-transition;
     background: $ez-white;
-    box-shadow: 0px calculateRem(2px) calculateRem(10px) calculateRem(-4px) rgba(0,0,0,0.15);
-    border: 1px solid transparent;
+    box-shadow: 0 calculateRem(2px) calculateRem(10px) calculateRem(-4px) rgba(0,0,0,0.15);
+    border: calculateRem(1px) solid transparent;
 
     &:hover,
     &:focus {
         color: $ez-white;
         text-decoration: none;
         background: $ez-secondary-ground;
-        border: 1px solid $ez-secondary-ground;
+        border: calculateRem(1px) solid $ez-secondary-ground;
     }
 
     &__content-type {
