--- a/Resources/public/scss/modules/sub-items-list/_grid.view.item.scss
+++ b/Resources/public/scss/modules/sub-items-list/_grid.view.item.scss
@@ -55,10 +55,14 @@
     }
 
     &__title {
-        min-height: calculateRem(43px);
-        word-break: break-all;
-        line-height: calculateRem(14px);
+        height: calculateRem(33px);
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;  
+        overflow: hidden;
+
+        line-height: calculateRem(15px);
         font-size: calculateRem(12px);
-        padding: calculateRem(8px) calculateRem(5px);
+        margin: calculateRem(8px) calculateRem(5px);
     }
 }
