--- a/Resources/public/scss/modules/sub-items-list/_grid.view.scss
+++ b/Resources/public/scss/modules/sub-items-list/_grid.view.scss
@@ -7,6 +7,6 @@
     .c-grid-view-item {
         flex: 1 1 calc(100% / 5);
         max-width: calculateRem(166px);
-        margin-right: calculateRem(20px);;
+        margin-right: calculateRem(20px);
     }
 }
