--- a/Resources/public/scss/modules/sub-items-list/_grid.view.item.scss
+++ b/Resources/public/scss/modules/sub-items-list/_grid.view.item.scss
@@ -8,6 +8,7 @@
     text-decoration: none;
     transition: background 0.3s $ez-admin-transition;
     background: $ez-white;
+    border: calculateRem(1px) solid rgba(0, 0, 0, 0.1);
     box-shadow: 0 calculateRem(2px) calculateRem(10px) calculateRem(0px) rgba(0, 0, 0, 0.15);
 
     &:hover,
