EZP-31038 - fix create location icon background in subtree component

--- a/Resources/public/scss/modules/sub-items-list/_action.btn.scss
+++ b/Resources/public/scss/modules/sub-items-list/_action.btn.scss
@@ -21,7 +21,7 @@
     &--move,
     &--hide,
     &--reveal,
-    &--create {
+    &--create-location {
         border: calculateRem(1px) solid $ez-color-secondary;
         background: $ez-color-secondary;
 
