--- a/Resources/public/scss/modules/universal-discovery/_content.table.scss
+++ b/Resources/public/scss/modules/universal-discovery/_content.table.scss
@@ -9,4 +9,12 @@
         border-radius: calculateRem(4px) calculateRem(4px) 0 0;
         font-weight: bold;
     }
+
+    & &__items {
+        .table {
+            thead {
+                background-color: inherit;
+            }
+        }
+    }
 }
