EZP-31357: As a Developer, I want UDW to be more extensible

--- a/Resources/public/scss/modules/_universal.discovery.scss
+++ b/Resources/public/scss/modules/_universal.discovery.scss
@@ -23,3 +23,4 @@
 @import 'universal-discovery/toggle.selection.button';
 @import 'universal-discovery/filters';
 @import 'universal-discovery/bookmarks.list';
+@import 'universal-discovery/translation.selector';
