--- a/Resources/public/scss/modules/universal-discovery/_selected.locations.item.scss
+++ b/Resources/public/scss/modules/universal-discovery/_selected.locations.item.scss
@@ -9,6 +9,9 @@
         height: calculateRem(75px);
         background-color: $ez-color-base-pale;
         border-radius: calculateRem(4px);
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
     &__info {
@@ -26,6 +29,10 @@
     &__info-description {
         font-size: calculateRem(12px);
         color: $ez-color-base-light;
+    }
+
+    &__actions-wrapper {
+        display: flex;
     }
 
     &__remove-button {
