--- a/Resources/public/scss/modules/universal-discovery/_selected.locations.scss
+++ b/Resources/public/scss/modules/universal-discovery/_selected.locations.scss
@@ -1,7 +1,7 @@
 .c-selected-locations {
     background-color: $ez-white;
-    position: absolute;
-    top: 0;
+    position: fixed;
+    top: calculateRem(50px);
     right: 0;
     height: 100%;
     width: calculateRem(60px);
