--- a/Resources/public/scss/modules/content-tree/_list.item.scss
+++ b/Resources/public/scss/modules/content-tree/_list.item.scss
@@ -3,7 +3,6 @@ $list-item-height: calculateRem(20px);
 
 #{$list-item} {
     line-height: $list-item-height;
-    max-height: $list-item-height;
 
     &__label {
         display: flex;
@@ -109,10 +108,11 @@ $list-item-height: calculateRem(20px);
     }
 
     .c-list {
-        opacity: 0;
+        transition: all 0.2s ease-in;
+        transform-origin: top;
+        transform: scaleY(0);
         list-style: none;
         max-height: 0;
-        max-width: 0;
         overflow: hidden;
     }
 
@@ -138,10 +138,12 @@ $list-item-height: calculateRem(20px);
         max-height: initial;
 
         > .c-list {
-            opacity: 1;
-            max-height: calculateRem(20000px);
+            transition: all 0.4s ease-out;
+            transform-origin: top;
+            transform: scaleY(1);
+            max-height: calculateRem(100000px);
             max-width: initial;
-            overflow: initial;
+            overflow: hidden;
         }
 
         > #{$list-item} {
