--- a/Resources/public/scss/modules/universal-discovery/_content.create.scss
+++ b/Resources/public/scss/modules/universal-discovery/_content.create.scss
@@ -8,7 +8,7 @@
     }
 
     &__actions {
-        display: flex;
+        display: none;
         justify-content: center;
         align-items: center;
         height: calculateRem(50px);
@@ -21,6 +21,18 @@
 
         &:hover {
             color: $ez-white;
+        }
+    }
+
+    &--footer-visible {
+        .m-content-create {
+            &__iframe {
+                height: calc(100% - #{calculateRem(60px)});
+            }
+
+            &__actions {
+                display: flex;
+            }
         }
     }
 }
