After code review

--- a/Resources/public/scss/modules/universal-discovery/_sort.switcher.scss
+++ b/Resources/public/scss/modules/universal-discovery/_sort.switcher.scss
@@ -16,8 +16,8 @@
 
         &--selected::after {
             content: '';
-            width: 0px;
-            height: 0px;
+            width: 0;
+            height: 0;
             position: absolute;
             top: calculateRem(11px);
             right: calculateRem(6px);
