--- a/Resources/public/scss/modules/sub-items-list/_table.view.item.scss
+++ b/Resources/public/scss/modules/sub-items-list/_table.view.item.scss
@@ -183,7 +183,7 @@
     }
 
     &__link {
-        display: block;
+        display: inline-block;
         color: $ez-color-hyperlink;
         text-decoration: none;
         cursor: pointer;
