--- a/Resources/public/scss/modules/universal-discovery/_sort.switcher.scss
+++ b/Resources/public/scss/modules/universal-discovery/_sort.switcher.scss
@@ -8,4 +8,30 @@
     &--disabled {
         opacity: 0.3;
     }
+
+    .c-menu-button {
+        position: relative;
+        padding: 0 calculateRem(18px);
+
+        &--selected::after {
+            content: '';
+            width: 0;
+            height: 0;
+            position: absolute;
+            top: calculateRem(11px);
+            right: calculateRem(6px);
+        }
+
+        &--sorted-asc::after {
+            border-left: calculateRem(3px) solid transparent;
+            border-right: calculateRem(3px) solid transparent;
+            border-bottom: calculateRem(5px) solid $ez-white;
+        }
+
+        &--sorted-desc::after {
+            border-top: calculateRem(5px) solid $ez-white;
+            border-left: calculateRem(3px) solid transparent;
+            border-right: calculateRem(3px) solid transparent;
+        }
+    }
 }
