Fixed position of tooltips

--- a/Resources/public/scss/modules/sub-items-list/_table.view.item.scss
+++ b/Resources/public/scss/modules/sub-items-list/_table.view.item.scss
@@ -1,6 +1,11 @@
 .c-table-view-item {
     &__tooltip {
-        left: calculateRem(22px) !important;
+        top: calculateRem(-5px) !important;
+        left: calculateRem(40px) !important;
+
+        .ez-tooltip__arrow {
+            left: calc(50% - 0.4rem) !important;
+        }
     }
 
     &__translation {
